changed header to reflect use of website better

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<header>Identify Animal's needs and behavior</header>
+<header>The Wild Animal Mini-Zoo Residents</header>
 	<title> Zoo Animals</title>
 
 		<h2>Bears</h2>
