added aposterphy to mini-zoo

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<header>The Wild Animal Mini-Zoo Residents</header>
+<header>The Wild Animal Mini-Zoo's Residents</header>
 	<title> Zoo Animals</title>
 
 		<h2>Bears</h2>
